        Let people add name of copyright holder, licence URL, and info page
          URL for node images (#179).
        Add config option to omit recent changes from home page.
        Split out "modules" from navbar.tt into separate templates navbar_*.tt
          to make it easier for people to change the order in a custom template
        Move common categories/locales into navbar.
        Write tests for and fix:
          #48 (Edit conflict page erroneously converts lat/lon to os_x, os_y).
          #173 (edit conflict form doesn't let you edit everything).
        Fix:
          #184 (Build.PL doesn't treat the absence of Config::Tiny gracefully.)

0.58    21 December 2006
        Tidy up some minor bugs in the new features.
        Add RDF autodiscovery link to nodes' <head> section.
        Added more data to RDF output
        Redesign node history view along lines of that used by MediaWiki
          (http://www.mediawiki.org/) for clarity.
        Add UPGRADING file which summarises important information for people
          upgrading.
        Add an optional new config parameter, http_charset, which will set
          an explicit charset http header on all responses.
        Add an optional new config parameter, ping_services, which is a list
          of services (defined in Wiki::Toolkit::Plugin::Ping) to ping when
          a node is written. Allows you to ping pingerati etc on changes.
        Helmert Transforms, so that British National grid users can have 
        accurate Google Maps tie-ins.
        dbencoding config variable to tell OpenGuides what charset your
          database encoding is.
        As a consequence declare the charset correctly in the XML feeds.
        Other minor UI improvements
        Redesigned node history view a la MediaWiki for greater clarity.
        

0.57    12 September 2006
        New interfaces:
        * Admin interface.
        * Show nodes missing metadata.