@@ -40,7 +40,8 @@ EOF
 my %yn_vars = map { $_ => 1 }
    qw(use_plucene enable_page_deletion navbar_on_home_page backlinks_in_title
       moderation_requires_password enable_node_image enable_common_categories
-      enable_common_locales recent_changes_on_home_page);
+      enable_common_locales recent_changes_on_home_page
+      show_gmap_in_node_display);
 
 my $skip_config = Module::Build->y_n("Skip OpenGuides configuration?", "n");
 if ( $skip_config ) {
@@ -97,7 +98,8 @@ foreach my $var ( qw(
    recent_changes_on_home_page home_name
    site_desc default_city default_country contact_email default_language
    formatting_rules_node backlinks_in_title gmaps_api_key centre_long
-   centre_lat default_gmaps_zoom default_gmaps_search_zoom force_wgs84
+   centre_lat show_gmap_in_node_display default_gmaps_zoom
+   default_gmaps_search_zoom force_wgs84
    licence_name licence_url licence_info_url moderation_requires_password
    enable_node_image enable_common_categories enable_common_locales
   ) ) {
