@@ -5,9 +5,10 @@ and for that reason they aren't exposed by default.
 To use Google Maps, you need to get an API key from
 http://www.google.com/apis/maps/signup.html. When you've put this value into
 the config file as gmaps_api_key, the maps become available to you in two
-places. Firstly, if the user has set the user preference to display Google
-Maps, any node which has location information will get an inset map
-pinpointing the location. Secondly, the URL
+places. Firstly, if you've set "show_gmap_in_node_display", and if the user
+has set their preferences to display Google Maps, any node which has
+location information will get an inset map pinpointing the location.
+Secondly, the URL
 http://.../wiki.cgi?action=index;format=map becomes a large map with a list
 of all nodes (regardless of the user settings). The latter will become very
 slow on any sizable guide (there is work being done on speeding up indexes
