@@ -16,6 +16,7 @@ my @variables = qw(
    default_language http_charset ping_services
    formatting_rules_node formatting_rules_link backlinks_in_title template_path
    custom_template_path geo_handler ellipsoid gmaps_api_key centre_long
+   show_gmap_in_node_display
    centre_lat default_gmaps_zoom default_gmaps_search_zoom force_wgs84
    licence_name licence_url licence_info_url moderation_requires_password
    enable_node_image enable_common_categories enable_common_locales
@@ -92,6 +93,7 @@ sub _init {
                      backlinks_in_title => 0,
                      geo_handler => 1,
                      ellipsoid => "WGS-84",
+                     show_gmap_in_node_display => 1,
                      centre_long => 0,
                      centre_lat => 0,
                      default_gmaps_zoom => 5,
@@ -171,6 +173,7 @@ sub _init {
         centre_lat => "What is the latitude of the centre point of a map to draw for your guide? (This question can be ignored if you aren't using Google Maps)",
         default_gmaps_zoom => "What default zoom level shall we use for Google Maps? (This question can be ignored if you aren't using Google Maps)",
         default_gmaps_search_zoom => "What default zoom level shall we use for Google Maps in the search results? (This question can be ignored if you aren't using Google Maps)",
+        show_gmap_in_node_display => "Would you like to display a Google Map on every node that has geodata? (This question can be ignored if you aren't using Google Maps)",
         force_wgs84 => "Forcibly treat stored lat/long data as if they used the WGS84 ellipsoid?",
         licence_name => "What licence will you use for the guide?",
         licence_url => "What is the URL to your licence?",
@@ -280,6 +283,8 @@ sub script_url {
 =item * default_gmaps_zoom
 
 =item * default_gmaps_search_zoom
+
+=item * show_gmap_in_node_display
 
 =item * force_wgs84
 
