@@ -16,6 +16,8 @@ http://dev.openguides.org/log/trunk
         Split out "modules" from navbar.tt into separate templates navbar_*.tt
           to make it easier for people to change the order in a custom template
         Move common categories/locales into navbar.
+        Add config option to suppress inline maps on geotagged nodes.
+        Fix preferences to take notice of users turning off inline Google maps.
         Write tests for and fix:
           #48 (Edit conflict page erroneously converts lat/lon to os_x, os_y).
           #173 (edit conflict form doesn't let you edit everything).
